Update HardTasks.java